<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acceleration">

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="44dp"
        android:onClick="onClickAction"
        android:text="@string/btnInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accelerationTxt2" />

    <EditText
        android:id="@+id/editTxtFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/fileNameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlot" />

    <Button
        android:id="@+id/btnPlot"
        android:layout_width="120dp"
        android:layout_height="71dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:onClick="plotActiivty"
        android:text="@string/btnInfo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAction" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="saveData"
        android:text="@string/btnInfo3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtFileName"
        app:layout_constraintVertical_bias="0.288" />

    <TextView
        android:id="@+id/accelerationTxt"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/Xcolor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="0" />

    <TextView
        android:id="@+id/accelerationTxt2"
        android:layout_width="105dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/YColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/accelerationTxt3"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toEndOf="@+id/accelerationTxt"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="0" />

    <TextView
        android:id="@+id/accelerationTxt3"
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/ZColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="116dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:onClick="clearData"
        android:text="@string/btnInfo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toEndOf="@+id/btnPlot"
        app:layout_constraintTop_toBottomOf="@+id/btnAction" />

    <TextView
        android:id="@+id/fsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAction"
        app:layout_constraintTop_toBottomOf="@+id/accelerationTxt2" />

</android.support.constraint.ConstraintLayout>